force-app/main/default/objects/Admin_Interface_Node_Configuration__c/Admin_Interface_Node_Configuration__c.object-meta.xml
<CustomObject>
    <description>Configuration items for File Control Administration page.</description>
    <label>BT Admin Interface Node Configuration</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Admin Interface Node Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>