force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Budget_Grouping_Data__c.field-meta.xml
<CustomField>
    <fullName>Budget_Grouping_Data__c</fullName>
    <description>Use this field in budget component for grouping budget lines (BT_NewBudgetItemClone)</description>
    <label>Budget Grouping Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group By Category</fullName>
                <default>true</default>
                <label>Group By Category</label>
            </value>
            <value>
                <fullName>Group By Vendor</fullName>
            </value>
            <value>
                <fullName>Group By Cost Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>