force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_Change_order__c.field-meta.xml
<CustomField>
    <fullName>Create_Change_order__c</fullName>
    <label>Create Change order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With CO Lines</fullName>
                <default>true</default>
                <label>With CO Lines</label>
            </value>
            <value>
                <fullName>Without CO Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>