force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Create_PO__c.field-meta.xml
<CustomField>
    <fullName>Create_PO__c</fullName>
    <label>Create PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With PO Lines</fullName>
            </value>
            <value>
                <fullName>Without PO Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>