force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Default_Account_for_SOV__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_for_SOV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Account for SOV</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Admin_Interface_Node_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>