force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Do_not_Shift_Schedule_Dates_base_on_Pred__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Shift_Schedule_Dates_base_on_Pred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not Shift Schedule Dates base on Predecessors</description>
    <label>Do not Shift Schedule Dates base on Pred</label>
    <type>Checkbox</type>
</CustomField>