force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Group_by_vendor__c.field-meta.xml
<CustomField>
    <fullName>Group_by_vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group by vendor</label>
    <type>Checkbox</type>
</CustomField>