force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Hide_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Hide_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Contractor Column in Schedule Gantt Chart</description>
    <inlineHelpText>Hide Contractor Column</inlineHelpText>
    <label>Hide Contractor</label>
    <type>Checkbox</type>
</CustomField>