force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Hide_Contractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Hide_Contractor_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Contractor Resource Column in Schedule Gantt Chart</description>
    <inlineHelpText>Hide Contractor Resource Column</inlineHelpText>
    <label>Hide Contractor Resource</label>
    <type>Checkbox</type>
</CustomField>