force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Hide_Global_Margin__c.field-meta.xml
<CustomField>
    <fullName>Hide_Global_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to hide and show global margin field in the quote component.</description>
    <label>Hide Global Margin</label>
    <type>Checkbox</type>
</CustomField>