force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Hide_Global_Markup__c.field-meta.xml
<CustomField>
    <fullName>Hide_Global_Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to hide and unhide the Global Margin field on quote component</description>
    <label>Hide Global Markup</label>
    <type>Checkbox</type>
</CustomField>