force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Hide_Internal_Resource__c.field-meta.xml
<CustomField>
    <fullName>Hide_Internal_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for hiding internal resource columns in scheduled Gantt chart</description>
    <inlineHelpText>Hide Internal Resource Column</inlineHelpText>
    <label>Hide Internal Resource</label>
    <type>Checkbox</type>
</CustomField>