force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Import_Approved_SOV_s_Payment_Apps__c.field-meta.xml
<CustomField>
    <fullName>Import_Approved_SOV_s_Payment_Apps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Approved SOV’s Payment Apps</label>
    <type>Checkbox</type>
</CustomField>