force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Import_Company_Accepted_Vendor_Payment_A__c.field-meta.xml
<CustomField>
    <fullName>Import_Company_Accepted_Vendor_Payment_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Company Accepted Vendor Payment A</label>
    <type>Checkbox</type>
</CustomField>