force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/New_Payment_Application__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Payment Application</label>
    <type>Checkbox</type>
</CustomField>