force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Reject_Quote_on_Rejected_Lines__c.field-meta.xml
<CustomField>
    <fullName>Reject_Quote_on_Rejected_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field under the quote to set the reject and approve button from preview quote.</description>
    <label>Reject Quote on Rejected Lines</label>
    <type>Checkbox</type>
</CustomField>