force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Remove_Single_Quote_Line_Option__c.field-meta.xml
<CustomField>
    <fullName>Remove_Single_Quote_Line_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Single Quote Line Option</label>
    <type>Checkbox</type>
</CustomField>