force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/RFQLines_Using_Product__c.field-meta.xml
<CustomField>
    <fullName>RFQLines_Using_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Lines Using Product</label>
    <type>Checkbox</type>
</CustomField>