force-app/main/default/objects/Admin_Interface_Node_Configuration__c/fields/Setting_Description__c.field-meta.xml
<CustomField>
    <fullName>Setting_Description__c</fullName>
    <label>Setting Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>